# Discuss

./: .gitignore  AGENTS.md  ARCHITECTURE_DEBT.md  ArcMeta.manifest  ArcMeta.md  ArcMeta.rc  ArchitectureComplianceAudit.md  CMakeLists.txt  Development_Plan.md  FERREX.rc  Inspect and Mark.md  Memories.md  Modification_Plan-32.md  Modification_Record.md  ModularizationAudit.md  PlanningandArchitecture.md  README.md  UiHelperAudit.md  arcmeta_debug.log.md  review-copied-code.prompt.md  双轨机制.md  开发者主导型 AI 协作约束规则.md  架构负债清单复核指令-1.md  职责单一架构审查提示词.md
Analysis_Modification_Plan/: Analysis_Modification_Plan-1.md  Analysis_Modification_Plan-103.md  Analysis_Modification_Plan-105.md  Analysis_Modification_Plan-11.md  Analysis_Modification_Plan-113.md  Analysis_Modification_Plan-119.md  Analysis_Modification_Plan-12.md  Analysis_Modification_Plan-120.md  Analysis_Modification_Plan-123.md  Analysis_Modification_Plan-129.md  Analysis_Modification_Plan-134.md  Analysis_Modification_Plan-135.md  Analysis_Modification_Plan-15.md  Analysis_Modification_Plan-159.md  Analysis_Modification_Plan-16.md  Analysis_Modification_Plan-161.md  Analysis_Modification_Plan-18.md  Analysis_Modification_Plan-19.md  Analysis_Modification_Plan-20.md  Analysis_Modification_Plan-23.md  Analysis_Modification_Plan-24.md  Analysis_Modification_Plan-28.md  Analysis_Modification_Plan-30.md  Analysis_Modification_Plan-34.md  Analysis_Modification_Plan-35.md  Analysis_Modification_Plan-37.md  Analysis_Modification_Plan-41.md  Analysis_Modification_Plan-43.md  Analysis_Modification_Plan-44.md  Analysis_Modification_Plan-45.md  Analysis_Modification_Plan-46.md  Analysis_Modification_Plan-47.md  Analysis_Modification_Plan-48.md  Analysis_Modification_Plan-51.md  Analysis_Modification_Plan-52.md  Analysis_Modification_Plan-53.md  Analysis_Modification_Plan-54.md  Analysis_Modification_Plan-56.md  Analysis_Modification_Plan-59.md  Analysis_Modification_Plan-62.md  (+23 more)
Buk_20260720_144208/: README.md
Eagle/: 20260602_210114_code_export.md  Eagle-逻辑架构.md  metadata (2).json  metadata.json  mtime.json  tags.json
FERREX-META/: CMakeLists.txt
FERREX-META/src/: main.cpp
FERREX-META/src/core/: AppConfig.h  CacheManager.cpp  CacheManager.h  CoreController.cpp  CoreController.h  IndexedEntry.h  ModelContract.h
FERREX-META/src/crypto/: EncryptionManager.cpp  EncryptionManager.h
FERREX-META/src/meta/: AllFrnManager.cpp  AllFrnManager.h  BatchRenameEngine.cpp  BatchRenameEngine.h  MetadataDefs.h  MetadataManager.cpp  MetadataManager.h
FERREX-META/src/mft/: DiskIndexCacheCoordinator.cpp  DiskIndexCacheCoordinator.h  MemoryQueryEngine.cpp  MemoryQueryEngine.h  MftReader.cpp  MftReader.h  NtfsVolumeMftParser.cpp  NtfsVolumeMftParser.h  ScchCache.cpp  ScchCache.h  UsnJournalTreeSynchronizer.cpp  UsnJournalTreeSynchronizer.h  UsnWatcher.cpp  UsnWatcher.h
FERREX-META/src/ui/: ConfigManager.cpp  ConfigManager.h  ContextMenuExecutor.cpp  ContextMenuExecutor.h  FramelessDialog.cpp  FramelessDialog.h  FramelessResizeBorder.cpp  FramelessResizeBorder.h  GlobalKeyboardShortcutHandler.cpp  GlobalKeyboardShortcutHandler.h  GridResultView.cpp  GridResultView.h  HistoryDropdownController.cpp  HistoryDropdownController.h  HoverEventFilter.cpp  HoverEventFilter.h  IScanResultView.h  JustifiedResultView.cpp  JustifiedResultView.h  JustifiedView.cpp  JustifiedView.h  ListResultView.cpp  ListResultView.h  QuickLookWindow.cpp  QuickLookWindow.h  ResizeEventFilter.cpp  ResizeEventFilter.h  ResultTableColumnWidthPolicy.cpp  ResultTableColumnWidthPolicy.h  ScanController.cpp  ScanController.h  ScanDialog.cpp  ScanDialog.h  ScanTableModel.cpp  ScanTableModel.h  StatusBarFormatter.cpp  StatusBarFormatter.h  SvgIcons.h  SystemDriveScanner.cpp  SystemDriveScanner.h  (+12 more)
FERREX-META/src/util/: ShellHelper.h
Modification_Plan/: 2650974.md  ARCHITECTURE_DEBT-1.md  ARCHITECTURE_DEBT-2.md  Analysis_Modification_Plan-10.md  Analysis_Modification_Plan-100.md  Analysis_Modification_Plan-102.md  Analysis_Modification_Plan-106.md  Analysis_Modification_Plan-107.md  Analysis_Modification_Plan-108.md  Analysis_Modification_Plan-109.md  Analysis_Modification_Plan-110.md  Analysis_Modification_Plan-111.md  Analysis_Modification_Plan-112.md  Analysis_Modification_Plan-114.md  Analysis_Modification_Plan-115.md  Analysis_Modification_Plan-116.md  Analysis_Modification_Plan-117.md  Analysis_Modification_Plan-118.md  Analysis_Modification_Plan-121.md  Analysis_Modification_Plan-122-1.md  Analysis_Modification_Plan-122.md  Analysis_Modification_Plan-124.md  Analysis_Modification_Plan-125.md  Analysis_Modification_Plan-126.md  Analysis_Modification_Plan-128.md  Analysis_Modification_Plan-13.md  Analysis_Modification_Plan-131-1.md  Analysis_Modification_Plan-132.md  Analysis_Modification_Plan-133.md  Analysis_Modification_Plan-136.md  Analysis_Modification_Plan-14.md  Analysis_Modification_Plan-158.md  Analysis_Modification_Plan-159.md  Analysis_Modification_Plan-160.md  Analysis_Modification_Plan-161.md  Analysis_Modification_Plan-162.md  Analysis_Modification_Plan-21.md  Analysis_Modification_Plan-22.md  Analysis_Modification_Plan-25.md  Analysis_Modification_Plan-26.md  (+94 more)
resources/: app.manifest  app_icon.aps  resources.qrc  style.qss
src/: main.cpp
旧版本-1/: ArcMeta.manifest  ArcMeta.rc  CMakeLists.txt  README.md
旧版本-3/: CMakeLists.txt
旧版本-3/src/: main.cpp
旧版本-3/src/core/: BasicCommands.h  CoreController.cpp  IndexedEntry.h
旧版本-3/src/meta/: CategoryRepo.cpp  CategoryRepo.h  DatabaseManager.cpp  DatabaseManager.h  MetadataDefs.h  MetadataManager.cpp  MetadataManager.h
旧版本-3/src/mft/: MftReader.cpp  MftReader.h  UsnWatcher.cpp
旧版本-3/src/ui/: AddressBar.cpp  AddressHistoryPanel.cpp  BatchRenameDialog.cpp  CategoryDelegate.h  CategoryModel.cpp  CategoryPanel.cpp  CategoryPanel.h  ColorPicker.cpp  ContentPanel.cpp  ContentPanel.h  FilterPanel.h  MainWindow.cpp  MainWindow.h  MetaPanel.cpp  MetaPanel.h  NavPanel.cpp  SvgIcons.h  ThumbnailDelegate.h  TreeItemDelegate.h  UiHelper.h
旧版本-4/: CMakeLists.txt
旧版本-6/: CMakeLists.txt  README.md
旧版本-7/: CMakeLists.txt  (+1 more)
(+599 files in other folders)
